--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-flask==3.0.0
-gunicorn==21.2.0
-opencv-contrib-python-headless==4.8.1.78
-numpy==1.26.2
-Pillow==10.1.0
+Flask==3.0.0
 firebase-admin==6.2.0
+flask-cors==4.0.0
+gunicorn==21.2.0
+opencv-contrib-python-headless
+numpy
+Pillow
