--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.0.0
-firebase-admin==6.2.0
-flask-cors==4.0.0
-gunicorn==21.2.0
+Flask
+firebase-admin
+flask-cors
+gunicorn
 opencv-contrib-python-headless
 numpy
 Pillow
