--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,9 @@
 services:
   - type: web
-    name: elyazisi-api
+    name: fontify-api
     env: docker
     plan: free
     healthCheckPath: /health
+    envVars:
+      - key: PORT
+        value: 8080
