--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==3.0.0
-firebase-admin==6.3.0
-flask-cors==4.0.0
-gunicorn==21.2.0
-opencv-contrib-python-headless==4.8.1.78
-numpy==1.24.3
-Pillow==10.1.0
-requests==2.31.0
+Flask
+firebase-admin
+flask-cors
+gunicorn
+opencv-contrib-python-headless
+numpy
+Pillow
