--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask==3.1.0
-flask-cors==5.0.0
-opencv-python-headless==4.10.0.84
-numpy==2.2.1
-firebase-admin==6.6.0
-gunicorn==23.0.0
+Flask==3.0.3
+Flask-Cors==4.0.1
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+firebase-admin==6.5.0
+gunicorn==22.0.0
 pdf2image==1.17.0
-Pillow==11.0.0
-requests==2.32.3
+Pillow==10.3.0
+requests==2.31.0
