--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==3.0.3
 Flask-Cors==4.0.1
-opencv-python-headless==4.9.0.80
+opencv-python-headless
 numpy==1.26.4
 firebase-admin==6.5.0
 gunicorn==22.0.0
