--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask
-firebase-admin
-flask-cors
-gunicorn
-opencv-contrib-python-headless
-numpy
-Pillow
-pdf2image
-requests
+Flask==3.0.3
+Flask-Cors==4.0.1
+gunicorn==22.0.0
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+Pillow==10.3.0
+pdf2image==1.17.0
+firebase-admin==6.5.0
+requests==2.31.0
