--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.1.0
 flask-cors==5.0.0
 opencv-python-headless==4.10.0.84
-numpy==2.2.1
+numpy<2.0.0
 firebase-admin==6.6.0
 gunicorn==23.0.0
 pdf2image==1.17.0
