--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask==3.1.0
-flask-cors==5.0.0
-opencv-python-headless==4.10.0.84
+flask
+flask-cors
+opencv-python-headless
 numpy<2.0.0
-firebase-admin==6.6.0
-gunicorn==23.0.0
-pdf2image==1.17.0
-Pillow==11.0.0
-requests==2.32.3
+firebase-admin
+gunicorn
+pdf2image
+Pillow
+requests
