--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,6 @@
 services:
   - type: web
     name: elyazisi-api
-    env: python
-    region: frankfurt
+    env: docker
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --bind 0.0.0.0:$PORT --workers 2 --timeout 120 app:app
     healthCheckPath: /health
-    
-    envVars:
-      - key: FLASK_ENV
-        value: production
-      - key: PYTHON_VERSION
-        value: 3.11.0
-    
-    autoDeploy: true
